<resources>
    <string name="app_name">registrationpractice</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="not_registered">Not Registered</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_registered">already registered</string>
</resources>
