<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nyc"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/userfile"
        android:hint="@string/Username" />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:background="#ffffff"
        android:hint="@string/Password"/>
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:background="#ffffff"
        android:hint="@string/confirm_password"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:background="#3eff0c" />
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textColorHint="#26CF00"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>